--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,12 @@ dependencies = [
     # Configuration management
     "hydra-core>=1.3.0",  # Composable config system
     "omegaconf>=2.3.0",  # Config management for Hydra
+    "ipykernel>=6.31.0",
+    "seaborn>=0.13.2",
+    "black>=25.9.0",
+    "isort>=6.1.0",
+    "pytest>=8.4.2",
+    "flake8>=7.3.0",
 ]
 
 [project.scripts]
