--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,21 @@ viz = [
     "seaborn>=0.12.0",
     "wandb>=0.15.0",
 ]
+# vLLM backend for efficient inference with PagedAttention
+# Recommended for long context without weight quantization
+vllm = [
+    "vllm>=0.6.0",
+]
+# FlashAttention-2 for memory-efficient attention (O(n) instead of O(n²))
+# Requires CUDA 11.8+ and compatible GPU
+flash = [
+    "flash-attn>=2.5.0",
+]
+# All GPU optimizations (vLLM + FlashAttention)
+gpu = [
+    "vllm>=0.6.0",
+    "flash-attn>=2.5.0",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
