improving retrieval and indexers

--- a/conf/study/rag_strategies_test.yaml
+++ b/conf/study/rag_strategies_test.yaml
@@ -55,8 +55,8 @@ rag:
   # --------------------------------------------------------------------------
   corpus:
     source: wikimedia/wikipedia
-    version: 20231101.simple  # Simple English Wikipedia (~200k articles)
-    max_docs: 50000           # Limit for faster indexing
+    version: 20231101.en  # Full English Wikipedia (~6M articles)
+    max_docs: 150000      # Larger subset for better coverage
 
   # --------------------------------------------------------------------------
   # Retriever Configurations - Test all types
@@ -97,14 +97,7 @@ rag:
       chunk_overlap: 50
 
     # --- Hierarchical Retriever (parent-child chunks) ---
-    - type: hierarchical
-      name: hierarchical_bge_1024_256
-      embedding_model: BAAI/bge-large-en-v1.5
-      parent_chunk_size: 1024
-      child_chunk_size: 256
-      parent_overlap: 100
-      child_overlap: 50
-
+    # Using larger chunks to reduce memory usage while maintaining quality
     - type: hierarchical
       name: hierarchical_bge_2048_512
       embedding_model: BAAI/bge-large-en-v1.5
@@ -112,6 +105,14 @@ rag:
       child_chunk_size: 512
       parent_overlap: 200
       child_overlap: 100
+
+    - type: hierarchical
+      name: hierarchical_bge_3072_768
+      embedding_model: BAAI/bge-large-en-v1.5
+      parent_chunk_size: 3072
+      child_chunk_size: 768
+      parent_overlap: 300
+      child_overlap: 150
 
   # --------------------------------------------------------------------------
   # Query Transformation Strategies
@@ -160,9 +161,16 @@ metrics:
   # Semantic metrics
   - bertscore
 
+  # LLM-based evaluation
+  - llm_judge
+
   # Skip slow metrics for fast iteration
   # - bleurt
-  # - llm_judge
+
+# LLM Judge configuration
+llm_judge:
+  model: openai:gpt-4o-mini
+  judgment_type: binary  # binary or ternary
 
 # ============================================================================
 # Output
